--- a/src/index.css
+++ b/src/index.css
@@ -53,6 +53,7 @@ body {
     margin-left: 20px;
   }
   .button__history{
+    
     background: #fff;
     border: 1px solid #999;
     font-size: 18px;
@@ -62,5 +63,28 @@ body {
     width: 36px;
     margin-top: 5px;
     text-align: center;
+  }
+
+  .players__table{
+    padding-top: 20px;
+    width: 100%;
+   
+  }
+  .players__table div{
+    display: inline-block;
+    margin-top: 10px;
+    margin-left: 10px;
+  }
+  .players__table .score{
+    background: #fff;
+    border: 1px solid #999;
+    font-size: 18px;
+    font-weight: bold;
+    line-height: 34px;
+    height: 36px;
+    width: 36px;
+    margin-top: 5px;
+    text-align: center;
+    margin-left: 40px
   }
   
